portfolio - fixed broken style mainly due to unwanted place-items: center in body

--- a/portfolio-hugo-varloud-meyer/src/components/Experience/style.module.css
+++ b/portfolio-hugo-varloud-meyer/src/components/Experience/style.module.css
@@ -3,8 +3,7 @@
     justify-content: center;
 }
 .experienceSection {
-    width: 90%;
-    margin-top: 50px;
+    width: 100%;
 }
 .experienceSectionImg {
     width: 100px;
