--- a/portfolio-hugo-varloud-meyer/src/components/Navbar/Navbar.css
+++ b/portfolio-hugo-varloud-meyer/src/components/Navbar/Navbar.css
@@ -1,15 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:700');
-@font-face {
-  font-family: 'Akira Expanded';
-  src: url('/assets/fonts/akira_bold-webfont.woff2') format('woff2');
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Akira Expanded', Menlo, poppins;
-}
-
 .navigation-menu ul {
   list-style: none;
   padding: 0;
